# ribotools

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  combine_all_read_length_distributions.py  combine_predictions.py  convert_Bed_to_bigBed_tracks.py  convert_Bed_to_bigBed_tracks_adhoc.py  convert_Bed_to_bigBed_tracks_final_for_release.py  create_orf_types_count_table.py  environment.yml  extract_rna_profiles.py  get_all_lengths_and_offsets.py  get_all_read_counts.py  get_all_read_counts_per_frame.py  get_all_variants_and_exon_coverage.py  get_all_variants_and_exon_coverage_adjusted_labels.py  get_category_profiles.py  get_rna_profiles.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml
data/: fields.txt
docs/source/: api-de.rst  api-gtf.rst  api-sample.rst  api-te.rst  api-workflow.rst  api.rst  conf.py  defaults.rst  estimate-de.rst  estimate-te.rst  faq.rst  getting-started.rst  howto-annotation.rst  howto-config.rst  howto-de.rst  howto-riboseq-orfs.rst  howto-run.rst  howto-te.rst  index.rst  installation.rst  ribo-seq-orfs.rst  tutorial-hipsc.rst  tutorial.rst  user-guide.rst
notebooks/: create-metagene-average-plot.ipynb
pproc/: defaults.py
pproc/htseq_wf/: alignment_workflow.py  call_htseq_count.py  get_ribo_periodic.py  run_htseq_workflow.py
pproc/htseq_wf/rnaseq/: extract_rna_profiles.py
pproc/pgrms/: create_bigBed_tracks.py  get_all_lengths_and_offsets.py  get_all_predictions.py  get_all_read_counts_per_frame.py  get_all_read_length_distributions.py  get_all_seq_filtering_counts.py  get_orf_types_count_table.py  pep_bed6_to_bed12.py
pproc/utils/: cl_utils.py
scripts/: create_trackDb  get-sample-table  run-dea  run-tea
scripts/dge/: prep-sample-table.R  run-dgeRibo-contrasts  run-dgeRibo-from-htseq.R  run-tea.R
src/ribotools/: __init__.py  defaults.py
src/ribotools/htseq_wf/: alignment_workflow.py  call_htseq_count.py  get_ribo_periodic.py  keep_ribo_periodic.py  run_htseq_workflow.py
src/ribotools/htseq_wf/rnaseq/: create_rna_profiles.py
src/ribotools/pgrms/: get_all_bam_periodic.py  get_all_read_length_distributions.py  get_gtf_from_predictions.py  get_psite_count_table.py  match_appris_scores.py  pep_bed6_to_bed12.py  prep_orf_beds.py
src/ribotools/scripts/: __main__.py  get-sample-table  run-dea  run-tea
src/ribotools/utils/: cl_utils.py  filenames.py
tests/regression/: conftest.py  test_ribotools.py
tests/unit/: conftest.py  test_ribotools.py
