[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ribotools"
description = "Ribotools: a toolbox for translation efficiency (TE) and differential expression (DE) analyses"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Etienne Boileau" }]
maintainers = [
  { name = "Etienne Boileau", email = "boileau@uni-heidelberg.de" }
]
keywords = [
  "Bioinformatics",
  "Ribo-seq/Ribosome profiling",
  "RNA-seq/RNA sequencing",
  "Translation efficiency (TE)",
  "Differential expression (DE)"
]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.11,<3.14"
dependencies = ["rpbp>=4.0.0", "htseq"]

[project.scripts]
# programs
get-all-bam-periodic = "ribotools.pgrms.get_all_bam_periodic:main"
get-gtf-from-predictions = "ribotools.pgrms.get_gtf_from_predictions:main"
# htseq_wf
run-htseq-workflow = "ribotools.htseq_wf.run_htseq_workflow:main"
alignment-workflow = "ribotools.htseq_wf.alignment_workflow:main"
get-ribo-periodic = "ribotools.htseq_wf.get_ribo_periodic:main"
keep-ribo-periodic = "ribotools.htseq_wf.keep_ribo_periodic:main"
call-htseq-count = "ribotools.htseq_wf.call_htseq_count:main"
# DEA/TEA
get-sample-table = "ribotools.scripts.__main__:get_sample_table"
run-tea = "ribotools.scripts.__main__:run_tea"
run-dea = "ribotools.scripts.__main__:run_dea"

[project.urls]
Github = "https://github.com/eboileau/ribotools/"
Issues = "https://github.com/eboileau/ribotools/issues"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-depends"]
docs = [
  "ipykernel",
  "matplotlib",
  "nbsphinx",
  "pandoc",
  "sphinx",
  "sphinx_rtd_theme",
  "furo",
  "sphinx-argparse",
  "sphinx-copybutton"
]

[tool.setuptools.dynamic]
version = { attr = "ribotools.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
