[metadata]
name = pproc
description = "Miscellaneous programs associated with the rpbp package and more"
long-description = file: README.md
version = 0.1.0
url = https://github.com/eboileau/pyproc-utils
author = Etienne Boileau
maintainer = Etienne Boileau
maintainer-email = boileau@uni-heidelberg.de
license = MIT
keywords = bioinformatics, riboseq, rnaseq
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.0

[options]
packages = find:
# see requirements.txt for pinned versions
install_requires =
    pbio
    rpbp
python_requires = >=3.6,<3.7.0a0
test_suite =
    nose.collector
tests_require =
    nose
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    # pgrms
    get-all-predictions = pproc.pgrms.get_all_predictions:main
    get-orf-types-count-table = pproc.pgrms.get_orf_types_count_table:main
    get-all-lengths-and-offsets = pproc.pgrms.get_all_lengths_and_offsets:main
    get-all-read-counts-per-frame = pproc.pgrms.get_all_read_counts_per_frame:main
    get-all-read-length-distributions = pproc.pgrms.get_all_read_length_distributions:main
    # htseq_wf
    run-htseq-workflow = pproc.htseq_wf.run_htseq_workflow:main
    alignment-workflow = pproc.htseq_wf.alignment_workflow:main
    get-ribo-periodic = pproc.htseq_wf.get_ribo_periodic:main
    keep-ribo-periodic = pproc.htseq_wf.keep_ribo_periodic:main
    call-htseq-count = pproc.htseq_wf.call_htseq_count:main
    # htseq_wf/rnaseq
    create-rna-profiles = pproc.htseq_wf.rnaseq.create_rna_profiles:main
    extract-rna-profiles = pproc.htseq_wf.rnaseq.extract_rna_profiles:main


# config for test integration
# [nosetests]

# sphinx integration with setuptools
# [build_sphinx]
